--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@iconify/react": "^3.1.2",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.8",
     "eslint-config-standard": "16.0.3",
