--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,34 +1,3 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": ["plugin:react/recommended", "standard"],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
-  "rules": {
-    "react/react-in-jsx-scope": "off",
-    "react/prop-types": "off",
-    "semi": [2, "always"],
-    "quotes": ["error", "double"],
-    "space-before-function-paren": "off",
-    "comma-dangle": [
-      "error",
-      {
-        "arrays": "never",
-        "objects": "never",
-        "imports": "never",
-        "exports": "never",
-        "functions": "never"
-      }
-    ],
-    "react/jsx-indent": ["error", 2]
-  }
+  "extends": ["ts-standard", "next/core-web-vitals"]
 }
