--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "estuarg",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@next/font": "^13.0.2",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
+    "next": "13.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.8.4"
   },
   "devDependencies": {
-    "@iconify/react": "^3.1.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.8",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "7.28.0"
+    "ts-standard": "^12.0.1"
   }
 }
