--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,3 @@
 {
-  "extends": ["node_modules/ts-standard/eslintrc.json", "next/core-web-vitals"]
+  "extends": ["node_modules/ts-standard/eslintrc.json"]
 }
