--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.8",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.5",
     "ts-standard": "^12.0.1"
   }
 }
